--- a/html/ui.html
+++ b/html/ui.html
@@ -8,18 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     
-    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+    <script src="nui://game/ui/jquery.js" type="text/javascript"></script>
 </head>
 
 <body>
 
-    <div id="notifications">
-        
-    </div>
-
-    <script>
-        $(".notification").hide();
-    </script>
+    <div id="notifications"></div>
 
     <script src="app.js"></script>
 </body>
